--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "iNotebook backend",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ayan Liaqat",
@@ -16,5 +17,8 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0"
+  }
+  "engines": {
+        "node": "v11.3.0"
   }
 }
